manifests/base/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: eshop-dotnet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eshop
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: eshop
    spec:
      containers:
        - name: container
          image: 'image-registry.openshift-image-registry.svc:5000/eshop/eshop:dev'
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      serviceAccountName: eshop
      serviceAccount: eshop
      securityContext:
        runAsUser: 1001
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
