manifests/base/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: eshop
  labels:
    app: eshop
spec:
  replicas: 5
  selector:
    matchLabels:
      app: eshop
  strategy:
    canary:
      canaryService: rollouts-eshop-canary-canary
      stableService: rollouts-eshop-canary-stable
      steps:
      - setWeight: 20
      - pause: { duration: 20 }
      - setWeight: 40
      - pause: { duration: 20 }
      - setWeight: 60
      - pause: { duration: 20 }
      - setWeight: 80
      - pause: { duration: 10 }
  template:
    metadata:
      labels:
        app: eshop
    spec:
      containers:
        - name: container
          image: 'image-registry.openshift-image-registry.svc:5000/eshop/eshop:dev'
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      serviceAccountName: eshop
      serviceAccount: eshop
      securityContext:
        runAsUser: 1001
      schedulerName: default-scheduler
