manifests/base/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollouts-eshop-canary-canary
spec:
  selector:
    app: eshop
  ports:
  - port: 19888
    targetPort: 19888
