manifests/base/service-stable.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollouts-eshop-canary-stable
spec:
  selector:
    app: eshop
  ports:
  - port: 19888
    targetPort: 19888
