manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eshop
spec:
  selector:
    app: eshop
  ports:
    - protocol: TCP
      port: 19888
      targetPort: 19888
